[gd_scene load_steps=37 format=3 uid="uid://cbkm47uuy7j1b"]

[ext_resource type="Texture2D" uid="uid://cjirdovtydvc4" path="res://assets/backgrounds/witnessSide.jpg" id="1_diuly"]
[ext_resource type="Script" path="res://scenes/crossExam3.gd" id="1_m5bm8"]
[ext_resource type="Texture2D" uid="uid://1l03kq0eie04" path="res://assets/backgrounds/witness-stand.png" id="3_i35ui"]
[ext_resource type="Texture2D" uid="uid://ygwl50wjqmvg" path="res://assets/sprites/Rain de Luca (Apollo Justice) - Witness.png" id="3_ypj38"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="4_q2pm3"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="5_5mpgf"]
[ext_resource type="Texture2D" uid="uid://ewgh7vd6l7a3" path="res://assets/ui/next-button.png" id="6_cy0m5"]
[ext_resource type="Texture2D" uid="uid://c03wh5m3ojobv" path="res://assets/ui/prev-button.png" id="7_6s0as"]
[ext_resource type="Texture2D" uid="uid://cnim4d3utyyik" path="res://assets/ui/mistake.png" id="8_xpqet"]
[ext_resource type="PackedScene" uid="uid://bftv2b4r6kgpr" path="res://scenes/holdItTransition.tscn" id="10_rf8pu"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="11_04eb2"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="12_ucoye"]

[sub_resource type="Animation" id="Animation_a6o8o"]
resource_name = "talk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.9, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xohpg"]
resource_name = "blink"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 4, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4r8cx"]
_data = {
"blink": SubResource("Animation_xohpg"),
"talk": SubResource("Animation_a6o8o")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mfjxy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_03pkq"]
texture = ExtResource("5_5mpgf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e8uul"]
texture = ExtResource("5_5mpgf")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8skn7"]
texture = ExtResource("5_5mpgf")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xofr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ij0pe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6se41"]
texture = ExtResource("6_cy0m5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rg4nx"]
texture = ExtResource("6_cy0m5")
modulate_color = Color(1, 0.829, 0.46, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1jdl2"]
texture = ExtResource("6_cy0m5")
modulate_color = Color(0.827451, 0.447059, 0.396078, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x1y1j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtprc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w1vf5"]
texture = ExtResource("7_6s0as")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ox255"]
texture = ExtResource("7_6s0as")
modulate_color = Color(1, 0.827451, 0.458824, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m1ue3"]
texture = ExtResource("7_6s0as")
modulate_color = Color(0.827451, 0.447059, 0.396078, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ql7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8b2w1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_16bta"]
texture = ExtResource("5_5mpgf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lkcrq"]
texture = ExtResource("5_5mpgf")
modulate_color = Color(0.835294, 0.709804, 0.603922, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fbs4m"]
texture = ExtResource("5_5mpgf")
modulate_color = Color(0.541176, 0.290196, 0.219608, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iumpi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rkgde"]

[node name="Node2D" type="Node2D"]

[node name="crossExam3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m5bm8")

[node name="Background" type="TextureRect" parent="crossExam3"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("1_diuly")

[node name="WitnessSprite" type="Sprite2D" parent="crossExam3/Background"]
position = Vector2(935, 497)
scale = Vector2(1.40612, 1.39698)
texture = ExtResource("3_ypj38")
hframes = 4
vframes = 3
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="crossExam3/Background/WitnessSprite"]
libraries = {
"": SubResource("AnimationLibrary_4r8cx")
}

[node name="WitnessStand" type="TextureRect" parent="crossExam3/Background"]
layout_mode = 0
offset_left = -138.0
offset_top = -122.0
offset_right = 2041.0
offset_bottom = 1102.0
texture = ExtResource("3_i35ui")

[node name="DialogueBoxButton" type="Button" parent="crossExam3"]
layout_mode = 0
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_mfjxy")

[node name="DialogueBox" type="Polygon2D" parent="crossExam3"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="crossExam3"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="crossExam3"]
layout_mode = 0
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_colors/font_color = Color(1, 0.312295, 0.248026, 1)
theme_override_fonts/font = ExtResource("4_q2pm3")
text = "- Elay's Testimony -"
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="crossExam3"]
layout_mode = 0
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("4_q2pm3")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="crossExam3"]
layout_mode = 0
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("4_q2pm3")
theme_override_styles/normal = SubResource("StyleBoxTexture_03pkq")
theme_override_styles/hover = SubResource("StyleBoxTexture_e8uul")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8skn7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3xofr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ij0pe")

[node name="CourtRecordText" type="Label" parent="crossExam3/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("4_q2pm3")
text = "Present"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NextButton" type="Button" parent="crossExam3"]
layout_mode = 0
offset_left = 1550.0
offset_top = 288.0
offset_right = 1924.0
offset_bottom = 750.0
scale = Vector2(0.914229, 0.935849)
theme_override_styles/normal = SubResource("StyleBoxTexture_6se41")
theme_override_styles/hover = SubResource("StyleBoxTexture_rg4nx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_1jdl2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_x1y1j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qtprc")

[node name="PrevButton" type="Button" parent="crossExam3"]
layout_mode = 0
offset_left = 36.0
offset_top = 284.0
offset_right = 408.0
offset_bottom = 747.0
scale = Vector2(0.907557, 0.937458)
theme_override_styles/normal = SubResource("StyleBoxTexture_w1vf5")
theme_override_styles/hover = SubResource("StyleBoxTexture_ox255")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m1ue3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5ql7x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8b2w1")

[node name="PressButton" type="Button" parent="crossExam3"]
layout_mode = 0
offset_left = 393.0
offset_top = -15.0
offset_right = 971.0
offset_bottom = 111.0
scale = Vector2(-0.786007, 0.946041)
theme_override_styles/normal = SubResource("StyleBoxTexture_16bta")
theme_override_styles/hover = SubResource("StyleBoxTexture_lkcrq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fbs4m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iumpi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rkgde")

[node name="CourtRecordText" type="Label" parent="crossExam3/PressButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.618645
anchor_top = 0.21202
anchor_right = 0.618648
anchor_bottom = 0.21202
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(-3.66162, 2.94265)
theme_override_fonts/font = ExtResource("4_q2pm3")
text = "Press"
metadata/_edit_use_anchors_ = true

[node name="MistakesContainer" type="GridContainer" parent="crossExam3"]
layout_mode = 0
offset_left = 48.0
offset_top = 163.0
offset_right = 1811.0
offset_bottom = 748.0
scale = Vector2(0.150628, 0.162304)
columns = 3

[node name="mistake1" type="TextureRect" parent="crossExam3/MistakesContainer"]
layout_mode = 2
texture = ExtResource("8_xpqet")

[node name="mistake2" type="TextureRect" parent="crossExam3/MistakesContainer"]
layout_mode = 2
texture = ExtResource("8_xpqet")

[node name="mistake3" type="TextureRect" parent="crossExam3/MistakesContainer"]
layout_mode = 2
texture = ExtResource("8_xpqet")

[node name="HoldItTransition" parent="crossExam3" instance=ExtResource("10_rf8pu")]
visible = false

[node name="blip" type="AudioStreamPlayer2D" parent="crossExam3"]
stream = ExtResource("11_04eb2")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="crossExam3"]
stream = ExtResource("12_ucoye")
volume_db = 5.943
